--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node src/app.ts",
     "build": "tsc",
     "serve": "node dist/app.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "kill-5001": "npx kill-port 5001"
   },
   "repository": {
     "type": "git",
